--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap3": "^3.3.5",
     "core-js": "^3.6.5",
+    "ionicons": "^2.0.1",
+    "jquery": "^3.6.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -17,6 +21,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "ionicons": "^5.5.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
